// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButtonGroup should apply switchDirection and direction props 1`] = `
<FlexComponent
  className="some-class"
  direction="column"
  switchDirection="medium"
>
  <FlexItemComponent
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </FlexItemComponent>
  <FlexItemComponent
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </FlexItemComponent>
</FlexComponent>
`;

exports[`RadioButtonGroup should match the snapshot 1`] = `
<FlexComponent
  className="some-class"
  direction="row"
>
  <FlexItemComponent
    key=".0"
    shrink={true}
  >
    <RadioButton
      checked={true}
      label="label 1"
      name="name"
      onChange={[Function]}
      value="one"
    />
  </FlexItemComponent>
  <FlexItemComponent
    key=".1"
    shrink={true}
  >
    <RadioButton
      checked={false}
      label="label 2"
      name="name"
      onChange={[Function]}
      value="two"
    />
  </FlexItemComponent>
</FlexComponent>
`;
